# syntax-text-ctrl

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  SyntaxTextCtrl.cpp  SyntaxTextCtrl.h  SyntaxTextCtrlConfig.cmake.in
demo/: CMakeLists.txt  Makefile  main.cpp
